<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_lose"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/lose_background_color"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/lose_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.375" />

        <TextView
            android:id="@+id/tv_lose_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/lose_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_lose"
            app:layout_constraintStart_toStartOf="@+id/tv_lose"
            app:layout_constraintTop_toBottomOf="@+id/tv_lose" />

        <Button
            android:id="@+id/btn_lose_back"
            android:layout_width="290dp"
            android:layout_height="90dp"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_black"
            android:elevation="2dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/end_back"
            android:textSize="24sp"
            app:cornerRadius="50sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_lose"
            app:layout_constraintStart_toStartOf="@+id/tv_lose"
            app:layout_constraintTop_toBottomOf="@+id/tv_lose_message" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>