<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/rubik_mono_one"
        android:text="@string/app_name_caps"
        android:textColor="@color/title_gray"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_menu_play"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="270dp"
        android:backgroundTint="@color/play_green"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/menu_play"
        android:textSize="60sp"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_title" />

    <TextView
        android:id="@+id/tv_menu_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/menu_credits"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_menu_misc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tv_menu_credits"
        app:layout_constraintEnd_toEndOf="@+id/btn_menu_play"
        app:layout_constraintStart_toStartOf="@+id/btn_menu_play"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_play">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_menu_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_menu_settings"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_button"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/settings_icon"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_menu_leaderboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_menu_leaderboard"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_button"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/leaderboard_icon"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>