<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_help"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/popup_outside_color"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/ll_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_help_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/tv_help_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/sprint_name"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_help_mode_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/sprint_desc"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_help_mode" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_help_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/iv_help_up"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/swipe_up"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_help_up"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:singleLine="false"
                    android:text="@string/help_up"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_help_up"
                    app:layout_constraintTop_toTopOf="@+id/iv_help_up" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_help_left_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/iv_help_left"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_help_left_right"
                    app:layout_constraintEnd_toStartOf="@+id/tv_help_left_right"
                    app:layout_constraintTop_toTopOf="@+id/tv_help_left_right"
                    app:srcCompat="@drawable/swipe_left"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/iv_help_right"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_help_left_right"
                    app:layout_constraintStart_toEndOf="@+id/tv_help_left_right"
                    app:layout_constraintTop_toTopOf="@+id/tv_help_left_right"
                    app:srcCompat="@drawable/swipe_right"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_help_left_right"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:singleLine="false"
                    android:text="@string/help_left_right"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_help_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/iv_help_down"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/swipe_down"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_help_down"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:singleLine="false"
                    android:text="@string/help_down"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_help_down"
                    app:layout_constraintEnd_toStartOf="@+id/iv_help_down" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_help_rotate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/iv_help_rotate_left"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="8dp"
                    android:rotation="-30"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_help_rotate"
                    app:layout_constraintEnd_toStartOf="@+id/tv_help_rotate"
                    app:layout_constraintTop_toTopOf="@+id/tv_help_rotate"
                    app:srcCompat="@drawable/double_tap"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/iv_help_rotate_right"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="8dp"
                    android:rotation="30"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_help_rotate"
                    app:layout_constraintStart_toEndOf="@+id/tv_help_rotate"
                    app:layout_constraintTop_toTopOf="@+id/tv_help_rotate"
                    app:srcCompat="@drawable/double_tap"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_help_rotate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:singleLine="false"
                    android:text="@string/help_rotate"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_help_exit"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/button_black"
                    android:fontFamily="@font/rubik_bold"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/help_back"
                    android:textSize="24sp"
                    app:cornerRadius="50sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_help_rotate" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>