<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_pause_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/popup_outside_color"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/ll_pause_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@color/popup_background_color"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_pause_menu_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/tv_pause_menu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/pause_menu_header"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_pause_menu_resume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <Button
                    android:id="@+id/btn_pause_resume"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/button_play"
                    android:fontFamily="@font/rubik_bold"
                    android:paddingLeft="38dp"
                    android:paddingTop="16dp"
                    android:paddingRight="38dp"
                    android:paddingBottom="16dp"
                    android:text="@string/pause_menu_resume"
                    android:textSize="20sp"
                    app:cornerRadius="50sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_pause_menu_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <Button
                    android:id="@+id/btn_pause_settings"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/button_black"
                    android:fontFamily="@font/rubik_bold"
                    android:paddingLeft="38dp"
                    android:paddingTop="16dp"
                    android:paddingRight="38dp"
                    android:paddingBottom="16dp"
                    android:text="@string/pause_menu_settings"
                    android:textSize="20sp"
                    app:cornerRadius="50sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_pause_menu_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="16dp">

                <Button
                    android:id="@+id/btn_pause_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/button_black"
                    android:fontFamily="@font/rubik_bold"
                    android:paddingLeft="38dp"
                    android:paddingTop="16dp"
                    android:paddingRight="38dp"
                    android:paddingBottom="16dp"
                    android:text="@string/pause_menu_exit"
                    android:textSize="20sp"
                    app:cornerRadius="50sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>